// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModalCreateQuestionnaire /> <TestModalCreateProject /> should render correctly 1`] = `
Array [
  <div
    className="sc-bdnxRM hXMCPX toasts-container toasts-container--top"
  />,
  <div
    className="sc-bdnxRM iyonkx toasts-container toasts-container--top-left"
  />,
  <div
    className="sc-bdnxRM ffNWZe toasts-container toasts-container--top-right"
  />,
  <div
    className="sc-bdnxRM drnSqO toasts-container toasts-container--bottom"
  />,
  <div
    className="sc-bdnxRM lhKBDU toasts-container toasts-container--bottom-left"
  />,
  <div
    className="sc-bdnxRM fjDKdX toasts-container toasts-container--bottom-right"
  />,
  <button
    aria-controls="id-g"
    aria-expanded={false}
    aria-haspopup="dialog"
    className="sc-bdnxRM sc-lbVvki cdItED edAWqw cap-button"
    data-cy="create-questionnaire-button"
    id="btn-add-questionnaire"
    onClick={[Function]}
    onClickCapture={[Function]}
    onKeyDown={[Function]}
    onKeyPressCapture={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseDownCapture={[Function]}
    type="button"
  >
    <svg
      className="sc-bdnxRM sc-eJocfa ifxlQq iiyXFY cap-icon"
      fill="none"
      viewBox="0 0 12 12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1 6h10M6 1v10"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={0.8}
      />
    </svg>
    create-questionnaire
  </button>,
  <div
    aria-label="create-questionnaire"
    aria-modal={true}
    data-dialog={true}
    hidden={true}
    id="id-g"
    onAnimationEnd={[Function]}
    onBlur={[Function]}
    onKeyDown={[Function]}
    onTransitionEnd={[Function]}
    role="dialog"
    style={
      Object {
        "display": "none",
      }
    }
    tabIndex={-1}
  />,
]
`;

exports[`<ModalCreateQuestionnaire /> <TestModalCreateProject /> should render modal open 1`] = `
Array [
  <div
    className="sc-bdnxRM hXMCPX toasts-container toasts-container--top"
  />,
  <div
    className="sc-bdnxRM iyonkx toasts-container toasts-container--top-left"
  />,
  <div
    className="sc-bdnxRM ffNWZe toasts-container toasts-container--top-right"
  />,
  <div
    className="sc-bdnxRM drnSqO toasts-container toasts-container--bottom"
  />,
  <div
    className="sc-bdnxRM lhKBDU toasts-container toasts-container--bottom-left"
  />,
  <div
    className="sc-bdnxRM fjDKdX toasts-container toasts-container--bottom-right"
  />,
  <button
    aria-controls="id-g"
    aria-expanded={true}
    aria-haspopup="dialog"
    className="sc-bdnxRM sc-lbVvki cdItED edAWqw cap-button"
    data-cy="create-questionnaire-button"
    id="btn-add-questionnaire"
    onClick={[Function]}
    onClickCapture={[Function]}
    onKeyDown={[Function]}
    onKeyPressCapture={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseDownCapture={[Function]}
    type="button"
  >
    <svg
      className="sc-bdnxRM sc-eJocfa ifxlQq iiyXFY cap-icon"
      fill="none"
      viewBox="0 0 12 12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1 6h10M6 1v10"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={0.8}
      />
    </svg>
    create-questionnaire
  </button>,
  <div
    aria-label="create-questionnaire"
    aria-modal={true}
    data-dialog={true}
    hidden={false}
    id="id-g"
    onAnimationEnd={[Function]}
    onBlur={[Function]}
    onKeyDown={[Function]}
    onTransitionEnd={[Function]}
    role="dialog"
    tabIndex={-1}
  >
    <div
      className="sc-bdnxRM cGKXaX sc-gsWcmt cap-modal__overlay"
      onClick={[Function]}
      style={
        Object {
          "opacity": 0,
        }
      }
    >
      <div
        className="sc-bdnxRM lfZFgo sc-bXexck bWODgZ cap-modal"
        style={
          Object {
            "opacity": 0,
            "transform": "translateY(-20px) translateZ(0)",
          }
        }
      >
        <header
          className="sc-bdnxRM jjfrHe cap-modal__header"
        >
          <div
            className="sc-bdnxRM kjxros"
          >
            <h2
              className="sc-bdnxRM hZqJQu cap-heading"
              style={
                Object {
                  "marginLeft": 0,
                  "marginTop": 0,
                }
              }
            >
              global.questionnaire
            </h2>
          </div>
          <button
            className="sc-bdnxRM eVPzhQ"
            onClick={[Function]}
            type="button"
          >
            <svg
              className="sc-bdnxRM sc-eJocfa jApSuO igzNGz cap-icon"
              fill="none"
              viewBox="0 0 12 12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M1 11L11 1M1 1l10 10"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth={0.8}
              />
            </svg>
          </button>
        </header>
        <main
          className="sc-bdnxRM bVOKYS cap-modal__body"
        >
          <form
            id="form-create-questionnaire"
          >
            <div
              className="sc-bdnxRM gEeIKB cap-form-control"
              role="group"
            >
              <div
                className="sc-bdnxRM gyHslL cap-radio-group"
              >
                <label
                  className="sc-bdnxRM iEnndE"
                  htmlFor="type_choice-VOTING"
                >
                  <div
                    className="sc-bdnxRM hXoPrw cap-radio"
                    style={
                      Object {
                        "marginLeft": 0,
                        "marginTop": 0,
                      }
                    }
                  >
                    <input
                      aria-required={true}
                      checked={false}
                      className="sc-bdnxRM hSdaGq cap-radio__input"
                      disabled={false}
                      id="type_choice-VOTING"
                      name="choices-for-field-type"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      required={true}
                      style={
                        Object {
                          "marginLeft": 0,
                          "marginTop": 0,
                        }
                      }
                      type="radio"
                    />
                    <div
                      className="sc-bdnxRM kMHtTX cap-radio__box"
                    />
                  </div>
                  <span
                    className="sc-bdnxRM isLILN cap-text"
                  >
                    voting
                  </span>
                </label>
                <label
                  className="sc-bdnxRM iEnndE"
                  htmlFor="type_choice-QUESTIONNAIRE"
                >
                  <div
                    className="sc-bdnxRM hXoPrw cap-radio"
                    style={
                      Object {
                        "marginLeft": 0,
                        "marginTop": 0,
                      }
                    }
                  >
                    <input
                      aria-required={true}
                      checked={true}
                      className="sc-bdnxRM hSdaGq cap-radio__input"
                      disabled={false}
                      id="type_choice-QUESTIONNAIRE"
                      name="choices-for-field-type"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      required={true}
                      style={
                        Object {
                          "marginLeft": 0,
                          "marginTop": 0,
                        }
                      }
                      type="radio"
                    />
                    <div
                      className="sc-bdnxRM kMHtTX cap-radio__box"
                    />
                  </div>
                  <span
                    className="sc-bdnxRM isLILN cap-text"
                  >
                    global.questionnaire
                  </span>
                </label>
              </div>
            </div>
            <div
              className="sc-bdnxRM gEeIKB cap-form-control"
              role="group"
            >
              <label
                className="sc-bdnxRM kGZvuB cap-form-label"
                htmlFor="title"
                style={
                  Object {
                    "marginLeft": 0,
                    "marginTop": 0,
                  }
                }
              >
                <p
                  className="sc-bdnxRM WxzeU cap-text"
                  style={
                    Object {
                      "marginLeft": 0,
                      "marginTop": 0,
                    }
                  }
                >
                  global.title
                </p>
              </label>
              <input
                aria-required={true}
                className="sc-bdnxRM sc-TtZnY dUfREC hOdGym cap-input"
                data-cy="create-questionnaire-modal-title"
                disabled={false}
                id="title"
                maxLength={255}
                minLength={2}
                name="title"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="questionnaire-title-placeholder"
                required={true}
                type="text"
                value=""
              />
            </div>
          </form>
        </main>
        <footer
          className="sc-bdnxRM kpDJRM cap-modal__footer"
        >
          <div
            className="sc-bdnxRM faBWgd cap-buttonGroup"
            style={
              Object {
                "marginLeft": 0,
                "marginTop": 0,
              }
            }
          >
            <button
              className="sc-bdnxRM sc-lbVvki liwAnN hFZdnJ cap-button"
              onClick={[Function]}
              style={
                Object {
                  "marginLeft": 0,
                  "marginTop": 0,
                }
              }
              type="button"
            >
              cancel
            </button>
            <button
              className="sc-bdnxRM sc-lbVvki liwAnN edAWqw cap-button"
              data-cy="create-questionnaire-modal-create-button"
              id="confirm-questionnaire-create"
              onClick={[Function]}
              type="submit"
            >
              global.send
            </button>
          </div>
        </footer>
      </div>
    </div>
  </div>,
]
`;
